# projetofinal

./: .env  .gitignore  INSTRUCOES_EXECUCAO_FINAL.md  INTEGRACAO_METATRADER5.md  README.md  RECUPERACAO_COMPLETA_FRONTEND.md  alembic.ini  conftest.py  manage.py  package-lock.json  package.json  requirements-dev.txt  requirements-mt5.txt  requirements.txt  requirements.v2.txt  requirements_backend.txt  requirements_mt5.txt  run.py  run_backend.py  run_backend_mt5.py  test_404.py  test_all_routes.py  test_bacen_client.py  test_company_news_routes.py  test_cotacoes_mt5.py  test_documents_routes.py  test_health_endpoints.py  test_macro_routes.py  test_market_routes.py  test_news_routes.py  test_portfolio_routes.py  test_research_routes.py  vite.config.ts
NoticiaScraper/: DEPLOY_INSTRUCTIONS.md  README.md  automated_scraper.py  install_local.bat  install_local.sh  pyproject.toml  replit.md  run_scraper.py  smart_scraper_expanded.py
backend/: .env.example  __init__.py  bulk_mt5_scraper.py  config.py  models.py
backend2/: __init__.py  app.py  b3simbols.py  config.py  database.py  database_improved.py  models.py
dados_financeiros/: financials_backfill.py  financials_realtime_user.py  financials_scraper_user.py  models.py  models_user_custom.py  run_local.py
documentos_cvm/: debug_playwright_response.html  fix_urls.py  models.py  realtime_scraper.py  scraper.py  test_parser.py
frontend/: .env  .env.example  App.tsx  README.md  constants.tsx  index.html  package.json  types.ts  vite.config.ts
frontend2/: index.html  metadata.json  package-lock.json  package.json
(+156 files in other folders)
